k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cipherflow
  labels:
    app: cipherflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cipherflow
  template:
    metadata:
      labels:
        app: cipherflow
    spec:
      containers:
      - name: cipherflow
        image: registry.digitalocean.com/cipherflow-registry/cipherflow:latest
        ports:
        - containerPort: 8000
