k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cipherflow-service
spec:
  type: LoadBalancer
  selector:
    app: cipherflow
  ports:
  - port: 80
    targetPort: 8000
